[package]
name = "luajit-c-bencher"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.9.4", features = [
  "luajit",
  "vendored",
  "async",
  "send",
  "serialize",
] }

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
cc = "1.0.83"

[[bench]]
name = "bench"
harness = false
